--- a/style.css
+++ b/style.css
@@ -4,3 +4,51 @@
   --light-color: #f8fcda;
   font-family: "Archivo", sans-serif;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+}
+
+.sidebar {
+  background-color: var(--dark-color, darkgreen);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.icon {
+  height: 30px;
+}
+
+.logo,
+.item {
+  display: flex;
+  align-items: flex-end;
+  gap: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.logo {
+  margin-bottom: 40px;
+}
+
+.sidebar-main {
+  margin-left: 22px;
+  margin-bottom: 50px;
+}
+
+.sidebar-secondary {
+  margin-left: 22px;
+}
+
+.logo img {
+  height: 50px;
+}
