--- a/style.css
+++ b/style.css
@@ -4,3 +4,115 @@
   --light-color: #f8fcda;
   font-family: "Archivo", sans-serif;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr 6fr;
+  height: 100vh;
+  width: 100vw;
+}
+
+.sidebar {
+  background-color: var(--dark-color);
+  color: white;
+  grid-column: span 1;
+  grid-row: span 2;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(12, 1fr);
+}
+
+.header {
+  display: grid;
+  background-color: var(--main-color);
+  color: white;
+  grid-column: 2 / span 1;
+  grid-row: span 1;
+  grid-template-rows: 1fr 2fr;
+}
+
+.head-top {
+  display: grid;
+  grid-template-columns: 5fr 1fr 1fr 2fr;
+}
+
+.head-bottom {
+  display: grid;
+  grid-template-columns: 1fr 3fr 2fr 2fr 2fr;
+}
+
+.main {
+  background-color: var(--light-color);
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.projects {
+  grid-row: span 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 4fr 4fr 4fr;
+}
+
+.announcements {
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+}
+
+.announcement-card {
+  background-color: white;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.trending {
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
+}
+
+.trending > h4,
+.projects > h4 {
+  grid-column: span 2;
+}
+
+.trending div {
+  grid-column: 2;
+}
+
+.icon {
+  width: 30px;
+}
+
+.user-icon {
+  width: 50px;
+  border-radius: 50%;
+}
+
+.user-icon-4 {
+  width: 50px;
+  border-radius: 70%;
+}
+
+.card {
+  width: 90%;
+  height: 200px;
+  background-color: white;
+}
+
+button {
+  background-color: var(--light-color);
+  color: var(--main-color);
+  height: 40px;
+  width: 100px;
+  font-family: "Archivo", sans-serif;
+  border: 0px;
+  border-radius: 50px;
+}
