--- a/style.css
+++ b/style.css
@@ -24,8 +24,23 @@
   grid-column: span 1;
   grid-row: span 2;
   display: grid;
+  align-items: center;
+  grid-template-rows: 0.5fr 2fr 2fr;
+  padding: 30px;
+}
+
+.sidebar-logo,
+.sidebar-main,
+.sidebar-secondary {
+  display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(12, 1fr);
+  row-gap: 20px;
+  align-self: start;
+  align-items: center;
+}
+
+.sidebar-logo {
+  column-gap: 20px;
 }
 
 .header {
@@ -35,6 +50,7 @@
   grid-column: 2 / span 1;
   grid-row: span 1;
   grid-template-rows: 1fr 2fr;
+  padding: 30px;
 }
 
 .head-top {
@@ -51,6 +67,7 @@
   background-color: var(--main-color);
   display: grid;
   grid-template-columns: 3fr 1fr;
+  padding: 30px;
 }
 
 .main h4 {
@@ -99,11 +116,6 @@
 .user-icon {
   width: 50px;
   border-radius: 50%;
-}
-
-.user-icon-4 {
-  width: 50px;
-  border-radius: 70%;
 }
 
 .card {
