--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 
 .header {
   display: grid;
-  background-color: var(--light-color);
+  background-color: rgb(239, 239, 227);
   color: var(--dark-color);
   grid-column: 2 / span 1;
   grid-row: span 1;
@@ -66,7 +66,7 @@ input[type="search"] {
 
 .notification {
   display: grid;
-  grid-template-columns: 1fr 0.5fr 0.9fr;
+  grid-template-columns: 1fr 0.5fr 0.8fr;
   align-items: center;
   justify-items: end;
 }
@@ -77,7 +77,8 @@ input[type="search"] {
   align-items: center;
 }
 
-.hello-there > div > p {
+.hello-there > div > p,
+.trending-card > div > h5 {
   padding-bottom: 5px;
 }
 
@@ -91,46 +92,86 @@ input[type="search"] {
 .main {
   background-color: var(--main-color);
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1fr 1fr 0.75fr;
+  grid-template-rows: 3vh 40vh 3vh 30vh;
   padding: 30px;
 }
 
-.main h4 {
+.main h3 {
   color: white;
 }
 
 .projects {
-  grid-row: span 2;
+  grid-row: 2 / span 3;
+  grid-column: span 2;
+  row-gap: 25px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 4fr 4fr 4fr;
-}
-
-.announcements {
-  display: grid;
-  grid-template-rows: 1fr 4fr;
-}
-
-.announcement-card {
-  background-color: white;
-  display: grid;
   grid-template-rows: repeat(3, 1fr);
 }
 
-.trending {
-  grid-column: 2;
-  display: grid;
+#project-h3 {
+  grid-row: 1;
 }
 
-.trending > h4,
-.projects > h4 {
-  grid-column: span 2;
+#announce-h3 {
+  grid-column: 3;
+  grid-row: 1;
+}
+
+#trending-h3 {
+  grid-column: 3;
+  grid-row: 3;
+}
+
+.announcements {
+  grid-column: 3;
+  grid-row: 2 / span 1;
+  display: grid;
+  grid-template-rows: 1fr 0.1fr 1fr 0.1fr 1fr;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  height: 70%;
+  align-items: center;
+}
+
+hr.style-one {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+  align-self: center;
+}
+
+.announcement-card > p {
+  font-size: 0.8em;
+  margin-top: 5px;
+}
+
+.trending {
+  grid-column: 3;
+  grid-row: 4;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  row-gap: 15px;
+  justify-items: center;
+  align-items: center;
 }
 
 .trending-card {
-  background-color: white;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.trending > h3,
+.projects > h3 {
+  grid-column: span 2;
 }
 
 .icon,
@@ -144,9 +185,49 @@ input[type="search"] {
 }
 
 .card {
-  width: 90%;
-  height: 200px;
+  width: 85%;
+
   background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 3fr 1fr;
+  border-left: orange 8px solid;
+}
+
+.card > p {
+  grid-row: 2 / span 1;
+  grid-column: span 3;
+  align-self: center;
+}
+
+.main p {
+  color: rgb(126, 115, 115);
+  font-weight: 100;
+}
+
+.card > h5 {
+  align-self: end;
+}
+
+#icon-1,
+#icon-2,
+#icon-3 {
+  grid-row: 3;
+  justify-self: center;
+}
+
+#icon-1 {
+  grid-column: 2;
+}
+
+#icon-2 {
+  grid-column: 3;
+}
+
+#icon-3 {
+  grid-column: 4;
 }
 
 button {
